# ecm

./: .clang-format  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  justfile  meson.build
doc/: FORMAT.md  format.txt
include/: eccedc.h  unecm.h  version.h.in
packaging/archlinux/: PKGBUILD
packaging/homebrew/: ecm.rb
src/: eccedc.c  ecm.c  unecm.c
tests/: benchmark.c  meson.build  roundtrip_test.sh  test_common.h  test_ecm.c  test_unecm.c
